wip : compat java 17 (3)